--- a/src/main/resources/templates/task/task-form.html
+++ b/src/main/resources/templates/task/task-form.html
@@ -17,29 +17,31 @@
     <div class="form-group">
         <label for="exp" class="col-sm-2 control-label">任务奖励</label>
         <div class="col-sm-10">
-            <input type="number" name="exp" min="1"  max="10" class="form-control" id="exp" placeholder="任务奖励">
+            <input type="number" name="exp" min="1" max="10" class="form-control" id="exp" placeholder="任务奖励">
         </div>
     </div>
 
     <div class="form-group">
         <label for="module" class="col-sm-2 control-label">功能模块</label>
         <div class="col-sm-10" id="module">
-            <select class="form-control">
+            <select class="form-control" name="module">
                 <option value="1">系统管理</option>
                 <option value="2">权限管理</option>
             </select>
         </div>
     </div>
 </form>
+
 <script>
-function saveBtnClick(cb) {
-    $.post('/task/save',$('#task-form').serialize(),function(data){
-    	if(data && data > 0){
-    		if(cb!= undefined){
-				layer.closeAll();                	
-    			eval(cb);
+    function saveBtnClick(cb) {
+        console.log($('#task-form'))
+        $.post('/task/save', $('#task-form').serialize(), function(data) {
+            if (data && data > 0) {
+                if (cb != undefined) {
+                    layer.closeAll();
+                    eval(cb);
+                }
             }
-    	}
-    })
-}
+        })
+    }
 </script>
