--- a/src/main/resources/templates/task/task-index.html
+++ b/src/main/resources/templates/task/task-index.html
@@ -13,63 +13,22 @@
                 <!-- /.box-header -->
                 <div class="box-body ">
                     <ul class="products-list product-list-in-box">
+                        #for(task : nomalTasks)
                         <li class="item">
                             <div class="product-img">
                                 <img src="/static/img/task.png" alt="Product Image">
                             </div>
                             <div class="product-info">
-                                <a href="javascript:void(0)" class="product-title">Samsung TV
-                                    <span class="label label-warning pull-right">$1800</span>
+                                <a href="javascript:void(0)" class="product-title">${task.result}
+                                    <span class="label label-warning pull-right">$${task.exp}</span>
                                 </a>
                                 <span class="product-description">
-                                    Samsung 32" 1080p 60Hz LED Smart HDTV.
+                                    ${task.describe}
                                     <a class="btn btn-success btn-xs pull-right">领取任务</a>
                                 </span>
                             </div>
                         </li>
-                        <!-- /.item -->
-                        <li class="item">
-                            <div class="product-img">
-                                <img src="/static/img/task.png" alt="Product Image">
-                            </div>
-                            <div class="product-info">
-                                <a href="javascript:void(0)" class="product-title">Bicycle
-                                    <span class="label label-info pull-right">$700</span>
-                                </a>
-                                <span class="product-description">
-                                    26" Mongoose Dolomite Men's 7-speed, Navy Blue.
-                                </span>
-                            </div>
-                        </li>
-                        <!-- /.item -->
-                        <li class="item">
-                            <div class="product-img">
-                                <img src="/static/img/task.png" alt="Product Image">
-                            </div>
-                            <div class="product-info">
-                                <a href="javascript:void(0)" class="product-title">Xbox One
-                                    <span class="label label-danger pull-right">$350</span>
-                                </a>
-                                <span class="product-description">
-                                    Xbox One Console Bundle with Halo Master Chief Collection.
-                                </span>
-                            </div>
-                        </li>
-                        <!-- /.item -->
-                        <li class="item">
-                            <div class="product-img">
-                                <img src="/static/img/task.png" alt="Product Image">
-                            </div>
-                            <div class="product-info">
-                                <a href="javascript:void(0)" class="product-title">PlayStation 4
-                                    <span class="label label-success pull-right">$399</span>
-                                </a>
-                                <span class="product-description">
-                                    PlayStation 4 500GB Console (PS4)
-                                </span>
-                            </div>
-                        </li>
-                        <!-- /.item -->
+                        #end
                     </ul>
                 </div>
             </div>
