--- a/src/main/resources/templates/task/task-form.html
+++ b/src/main/resources/templates/task/task-form.html
@@ -8,9 +8,9 @@
     </div>
 
     <div class="form-group">
-        <label for="describe" class="col-sm-2 control-label">任务描述</label>
+        <label for="description" class="col-sm-2 control-label">任务描述</label>
         <div class="col-sm-10">
-            <textarea name="describe" class="form-control" id="describe" rows="4" placeholder="任务描述"></textarea>
+            <textarea name="description" class="form-control" id="description" rows="4" placeholder="任务描述"></textarea>
         </div>
     </div>
 
