--- a/src/main/resources/templates/main/main-content.html
+++ b/src/main/resources/templates/main/main-content.html
@@ -33,7 +33,7 @@
                         </div>
                         <!-- /.box-header -->
                         <div class="box-body ">
-                            ${project.describe}
+                            ${project.description}
                         </div>
 
                         <div class="box-footer ">
