--- a/src/main/resources/templates/task/task-form.html
+++ b/src/main/resources/templates/task/task-form.html
@@ -1,5 +1,6 @@
 <form class="form-horizontal" id="task-form">
     <input type="hidden" name="project" value="${project}">
+    <input type="hidden" name="classify" value="${classify}">
     <div class="form-group">
         <label for="result" class="col-sm-2 control-label">期望结果</label>
         <div class="col-sm-10">
